--- a/src/index.liquid
+++ b/src/index.liquid
@@ -6,7 +6,7 @@ title: Home
 <ul>
   {% for post in collections.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.data.title }}</a>
+      <a href="{{ post.url | url }}">{{ post.data.title }}</a>
       <small>{{ post.date | date: "%Y-%m-%d" }}</small>
     </li>
   {% else %}
